--- a/EasyInstaller/package.ini
+++ b/EasyInstaller/package.ini
@@ -61,15 +61,13 @@ move /config/ultrahand/downloads/FPSLocker-Warehouse-main/atmosphere/ /atmospher
 delete /config/ultrahand/downloads/FPSLocker-Warehouse-main/
 delete /config/ultrahand/downloads/FPSLocker-Warehouse-main.zip
 
-[Switch-OC-Suite (no kip) - latest]
+[UltraCam - latest]
 try:
-download https://github.com/hanai3Bi/Switch-OC-Suite/releases/latest/download/AIO.zip /config/ultrahand/downloads/
-unzip /config/ultrahand/downloads/AIO.zip /config/ultrahand/downloads/AIO/
-move /config/ultrahand/downloads/AIO/atmosphere/contents/ /atmosphere/contents/
-move /config/ultrahand/downloads/AIO/config/ /config/
-move /config/ultrahand/downloads/AIO/switch/ /switch/
-delete /config/ultrahand/downloads/AIO/
-delete /config/ultrahand/downloads/AIO.zip
+download https://github.com/Langegen/Easy-Installer/raw/main/res/TOTKUltraCam.zip /config/ultrahand/downloads/
+unzip /config/ultrahand/downloads/TOTKUltraCam.zip /config/ultrahand/downloads/TOTKUltraCam/
+move /config/ultrahand/downloads/TOTKUltraCam /switch/.packages
+delete /config/ultrahand/downloads/TOTKUltraCam/
+delete /config/ultrahand/downloads/TOTKUltraCam.zip
 
 [Commands]
 [Package Info]
